<resources>
    <string name="app_name">PipwaveExample</string>
    <string name="_15_00">15.00</string>
    <string name="_0">0</string>
    <string name="_0_00">0.00</string>
    <string name="_10_00">10.00</string>
    <string name="shipping_fee_rm">Shipping Fee : RM</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal_rm">Subtotal : RM</string>
    <string name="total_rm">Total : RM</string>
    <string name="purchase">Purchase</string>
    <string name="t_shirt_marron">T-Shirt Marron</string>
    <string name="t_shirt_black">T-Shirt Black</string>
    <string name="price">Price</string>
    <string name="item">Item</string>
    <string name="checkout">Checkout</string>
    <string name="rm15_00">RM15.00</string>
    <string name="pluz">+</string>
    <string name="minus">-</string>
    <string name="rm10_00">RM10.00</string>
    <string name="marron_subtotal_rm">Marron - Subtotal: RM</string>
    <string name="total_rm1">total: RM</string>
    <string name="black_subtotal_rm">Black - Subtotal: RM</string>
    <string name="zamriyusof1994_gmail_com">zamriyusof1994@gmail.com</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="zip">Zip:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="country">Country:</string>
    <string name="contact_no">Contact No:</string>
    <string name="email">Email:</string>
    <string name="zamri">Zamri Bin Yusof</string>
    <string name="bandar_baru_sentul">Bandar Baru Sentul</string>
    <string name="blok_a_12_12_pangsapuri_mawar">Blok A–12–12 Pangsapuri Mawar</string>
    <string name="kuala_lumpur">Kuala Lumpur</string>
    <string name="_0192901157">0192901157</string>
    <string name="continuee">Continue</string>
    <string name="w_p_kuala_lumpur">W.P Kuala Lumpur</string>
    <string name="_51000">51000</string>
    <string name="malaysia">Malaysia</string>
    <string name="your_order">Your Order</string>
</resources>
